search doctor and doctor appointment and consultation changes

--- a/WebApp/Views/Appointment/PartialUpcoming.cshtml
+++ b/WebApp/Views/Appointment/PartialUpcoming.cshtml
@@ -70,9 +70,9 @@ else
 
        // $('#datatable').dataTable();
         $('#datatable').dataTable({
-            'order': [[1, 'desc']],
+            'order': [[1, 'asc']],
             columnDefs: [
-              { type: 'date-dd-mmm-yyyy', targets: 1 },
+              { type: 'date-yyyy-mm-dd', targets: 1 },
              
             ]
         });
