--- a/WebApp/Views/Consultation/Index.cshtml
+++ b/WebApp/Views/Consultation/Index.cshtml
@@ -7,7 +7,7 @@
 
 <style>
     .user-detail {
-        max-width: 250px;
+        /*max-width: 250px;*/
         margin: 0 auto;
         color: #375781;
         height: 100px;
