--- a/WebApp/Views/Consultation/PartialViewDetail.cshtml
+++ b/WebApp/Views/Consultation/PartialViewDetail.cshtml
@@ -124,7 +124,7 @@
         </div>
 
         <div style="border-bottom: 1px Solid #c3bebe; border-top: 1px Solid #c3bebe; margin: 36px -15px 20px; padding: 10px 21px 0; ">
-            <p style="color: #375781;"><span style="width: 150px; float: left;">Appointment Date/Time</span><b>@formattedDate-@formattedTime</b></p>
+            <p style="color: #375781;"><span style="width: 150px; float: left;">App. Date/Time</span><b>@formattedDate-@formattedTime</b></p>
         </div>
         <p style="color: #375781;font-family:Helvetica Neue,Roboto,Arial,Droid Sans,sans-serif; font-size: 14px;font-weight: 400;line-height: 1.471;"><b>Reason of Visit:</b><br> @rov</p>
         <p id="p_chiefComplaints" style="color: #375781;font-family:Helvetica Neue,Roboto,Arial,Droid Sans,sans-serif; font-size: 14px;font-weight: 400;line-height: 1.471;"><b>Chief Complaint:</b><br> @chiefComplaints</p>
