--- a/WebApp/Views/DoctorAppointment/PartialDoctorPending.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorPending.cshtml
@@ -99,14 +99,7 @@ else
             fixedHeader: true
         });
 
-        var $datatable = $('#datatable-checkbox');
-
-
-        $datatable.on('draw.dt', function() {
-            $('input').iCheck({
-                checkboxClass: 'icheckbox_flat-green'
-            });
-        });
+       
 
         //TableManageButtons.init();
     });
@@ -128,6 +121,7 @@ else
             alert('Consultation not found for this appointment.');
             return;
         }
+        showLoader();
         objCRR["userID"] = '@SessionHandler.UserInfo.userId.ToString()';
         objCRR["appID"] = appID;
         $.ajax({
@@ -140,18 +134,18 @@ else
                 //Reload container
                 if (result.Message != undefined) {
                     //alert(result.Message.ReasonPhrase);
-                    new PNotify({ title: 'Error', text: "Consultation "+" "+result.Message, type: 'error', styling: 'bootstrap3' });
-                    //stopLoader();
+                    new PNotify({ title: 'Error', text: "Consultation "+" "+result.Message.ReasonPhrase, type: 'error', styling: 'bootstrap3' });
+                    hideLoader();
                 }
                 else {
-                    new PNotify({ title: 'Success', text: "Consultation is marked as completed successfully.", type: 'success', styling: 'bootstrap3' });
+                    new PNotify({ title: 'Success', text: "Consultation is completed successfully.", type: 'success', styling: 'bootstrap3' });
                     //alert('Consultation is marked as completed successfully.');
                     reloadContainer(function () {
 
 
-                        //Stop displaying loader
-                        //stopLoader();
+                        
                     });
+                    hideLoader();
                 }
 
             },
@@ -159,7 +153,7 @@ else
                 //alert(err.statusText);
                 new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
                 //Stop displaying loader
-                //stopLoader();
+                hideLoader();
             }
         });
     }
@@ -169,6 +163,7 @@ else
         objCRR["appID"] = editappid;
         objCRR["appType"] = currentTab;
         objCRR["userID"] = '@SessionHandler.UserInfo.userId';
+        showLoader();
         $.ajax({
             url: '@Url.Action("CompleteApp", "DoctorAppointment")',
             type: "POST",
@@ -177,29 +172,31 @@ else
             success: function (result) {
                 //Reload container
                 if (result.Message != undefined) {
-                    alert(result.Message.ReasonPhrase);
+                    //alert(result.Message.ReasonPhrase);
                     $('#myModal5').modal('hide');
-                    //new PNotify({ title: 'Error', text: result.Message.ReasonPhrase, type: 'error', styling: 'bootstrap3' });
-                    //stopLoader();
+                    new PNotify({ title: 'Error', text: result.Message.ReasonPhrase, type: 'error', styling: 'bootstrap3' });
+                    hideLoader();
                 }
                 else {
-                    alert('Consultation is marked as completed successfully.');
+                    //alert('Consultation is marked as completed successfully.');
+                    new PNotify({ title: 'Success', text: "Consultation is completed successfully.", type: 'success', styling: 'bootstrap3' });
                     $('#myModal5').modal('hide');
                     reloadContainer(function () {
 
-                        // new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'success', styling: 'bootstrap3' });
+                        // 
                         //Stop displaying loader
                         //stopLoader();
                     });
+                    hideLoader();
                 }
 
             },
             error: function (err) {
-                alert(err.statusText);
+                //alert(err.statusText);
                 $('#myModal5').modal('hide');
-                //new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
+                new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
                 //Stop displaying loader
-                //stopLoader();
+                hideLoader();
             }
         });
     }
@@ -215,12 +212,12 @@ else
             success: function (result) {
                 //Reload container
                 if (result.Message != undefined) {
-                    alert(result.Message.ReasonPhrase);
+                   // alert(result.Message.ReasonPhrase);
                     new PNotify({ title: 'Error', text: result.Message.ReasonPhrase, type: 'error', styling: 'bootstrap3' });
-                    //stopLoader();
+                    hideLoade();
                 }
                 else {
-                    alert('Appointment is rescheduled successfully.');
+                    new PNotify({ title: 'Success', text: "Reschedule Request has been sent to patient.", type: 'success', styling: 'bootstrap3' });
                     $('#myModal5').modal('hide');
                     reloadContainer(function () {
 
@@ -229,21 +226,22 @@ else
                         //stopLoader();
 
                     });
+                    hideLoader();
                 }
 
             },
             error: function (err) {
-                alert(err.statusText);
+                //alert(err.statusText);
                 new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
                 //Stop displaying loader
-                //stopLoader();
+                hideLoader();
             }
         });
     }
     $(function () {
         $(".preschedule").click(function () {
 
-            //showLoader();
+            showLoader();
             var objCRR = {};
 
             var $buttonClicked = $(this);
@@ -262,26 +260,26 @@ else
                 success: function (result) {
                     //Reload container
                     if (result.Message != undefined) {
-                        alert(result.Message.ReasonPhrase);
-                        //new PNotify({ title: 'Error', text: result.Message.ReasonPhrase, type: 'error', styling: 'bootstrap3' });
-                        //stopLoader();
+                        //alert(result.Message.ReasonPhrase);
+                        new PNotify({ title: 'Error', text: result.Message.ReasonPhrase, type: 'error', styling: 'bootstrap3' });
+                        hideLoader();
                     }
                     else {
-                        alert('Appointment is rescheduled successfully.');
+                        //alert('Appointment is rescheduled successfully.');
+                        new PNotify({ title: 'Success', text: "Reschedule Request has been sent to patient.", type: 'success', styling: 'bootstrap3' });
                         reloadContainer(function () {
 
-                            // new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'success', styling: 'bootstrap3' });
-                            //Stop displaying loader
-                            //stopLoader();
+                            
                         });
+                        hideLoader();
                     }
 
                 },
                 error: function (err) {
-                    alert(err.statusText);
-                    //new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
+                    //alert(err.statusText);
+                    new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
                     //Stop displaying loader
-                    //stopLoader();
+                    hideLoader();
                 }
             });
 
@@ -316,26 +314,26 @@ else
                 success: function (result) {
                     //Reload container
                     if (result.Message != undefined) {
-                        alert(result.Message.ReasonPhrase);
-                        //new PNotify({ title: 'Error', text: result.Message.ReasonPhrase, type: 'error', styling: 'bootstrap3' });
-                        //stopLoader();
+                        //alert(result.Message.ReasonPhrase);
+                        new PNotify({ title: 'Error', text: result.Message.ReasonPhrase, type: 'error', styling: 'bootstrap3' });
+                        hideLoader();
                     }
                     else {
-                        alert('Consultation is marked as completed successfully.');
+                        
+                         new PNotify({ title: 'Success', text: "Consultation is completed successfully.", type: 'success', styling: 'bootstrap3' });
                         reloadContainer(function () {
 
-                            // new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'success', styling: 'bootstrap3' });
-                            //Stop displaying loader
-                            //stopLoader();
+                            
                         });
+                        hideLoader();
                     }
 
                 },
                 error: function (err) {
-                    alert(err.statusText);
-                    //new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
+                    
+                    new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
                     //Stop displaying loader
-                    //stopLoader();
+                    hideLoader();
                 }
             });
 
