--- a/WebApp/Views/DoctorAppointment/PartialDoctorReschedule.cshtml
+++ b/WebApp/Views/DoctorAppointment/PartialDoctorReschedule.cshtml
@@ -97,14 +97,7 @@ else
           fixedHeader: true
         });
 
-        var $datatable = $('#datatable-checkbox');
-
        
-        $datatable.on('draw.dt', function() {
-          $('input').iCheck({
-            checkboxClass: 'icheckbox_flat-green'
-          });
-        });
 
        // TableManageButtons.init();
       });
@@ -121,6 +114,7 @@ else
         //objCRR["doctorID"] = doctorid;
         objCRR["appID"] = editappid;
         objCRR["userID"] = '@SessionHandler.UserInfo.userId';
+        showLoader();
         $.ajax({
             url: '@Url.Action("CancelReschedule", "DoctorAppointment")',
             type: "POST",
@@ -131,23 +125,24 @@ else
                 if (result.Message != undefined) {
                     alert(result.Message.ReasonPhrase);
                     new PNotify({ title: 'Error', text: result.Message.ReasonPhrase, type: 'error', styling: 'bootstrap3' });
-                    //stopLoader();
+                    hideLoader();
                 }
                 else {
-                    alert('Reschedule request is cancelled successfully.');
+                    //alert('Reschedule request is cancelled successfully.');
+                    new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'success', styling: 'bootstrap3' });
                     $('#myModal5').modal('hide');
                     reloadContainer(function () {
                         
                         // new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'success', styling: 'bootstrap3' });
                         //Stop displaying loader
-                        //stopLoader();
+                        hideLoader();
 
                     });
                 }
 
             },
             error: function (err) {
-                alert(err.statusText);
+                //alert(err.statusText);
                 new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
                 //Stop displaying loader
                 //stopLoader();
@@ -158,7 +153,7 @@ else
     $(function () {
         $(".cancelreschedule").click(function () {
 
-            //showLoader();
+            showLoader();
             var objCRR = {};
            
             var $buttonClicked = $(this);
@@ -175,28 +170,28 @@ else
                 success: function (result) {
                     //Reload container
                     if (result.Message != undefined) {
-                        alert(result.Message.ReasonPhrase);
+                        //alert(result.Message.ReasonPhrase);
                         new PNotify({ title: 'Error', text: result.Message.ReasonPhrase, type: 'error', styling: 'bootstrap3' });
-                        //stopLoader();
+                        hideLoader();
                     }
                     else {
-                        alert('Reschedule request is cancelled successfully.');
-
+                        //alert('Reschedule request is cancelled successfully.');
+                        new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'success', styling: 'bootstrap3' });
                         reloadContainer(function () {
                             
                             // new PNotify({ title: 'Success', text: "Reschedule request is cancelled successfully.", type: 'success', styling: 'bootstrap3' });
                             //Stop displaying loader
-                            //stopLoader();
+                            hideLoader();
                            
                         });
                     }
 
                 },
                 error: function (err) {
-                    alert(err.statusText);
+                    //alert(err.statusText);
                     new PNotify({ title: 'Error', text: err.statusText, type: 'error', styling: 'bootstrap3' });
                     //Stop displaying loader
-                    //stopLoader();
+                    hideLoader();
                 }
             });
 
