checkboxes style done and pnotify type chane from success to dard

--- a/WebApp/Views/MyHealth/Index.cshtml
+++ b/WebApp/Views/MyHealth/Index.cshtml
@@ -10,7 +10,7 @@
             new PNotify({
                 title: 'Success',
                 text: "@ViewBag.Success",
-                type: 'success',
+                type: 'dark',
                 styling: 'bootstrap3'
             });
         });
